--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -168,8 +168,7 @@ site_state: true
   #YouTube: https://youtube.com/yourname || youtube
   #Instagram: https://instagram.com/yourname || instagram
   #Skype: skype:yourname?call|chat || skype
-social:
-  GitHub: https://github.com/mengban || gitHub
+
 
 social_icons:
   enable: true
@@ -367,7 +366,7 @@ custom_logo:
 # Code Highlight theme
 # Available values: normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night
+highlight_theme: night bright
 
 # Enable "cheers" for archive page.
 cheers_enabled: true
